# floodingnaque

./: .cache_ggshield  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  COMPLETE_SOLUTION_SUMMARY.md  CONTRIBUTING.md  Floodingnaque_Thesis_Paper_Guide.txt  LICENSE  OFFICIAL_RECORDS_QUICK_START.md  RANDOM_FOREST_THESIS_READY.md  README.md  SECURITY.md  THESIS_DEFENSE_CHECKLIST.txt  TODO.md  docker-compose-development.yml  docker-compose-production.yml  docker-compose-staging.yml  docker-compose.base.yml  docker-compose.mlflow.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  replacements.txt  vercel.json
.github/: CODEOWNERS  cliff.toml  dependabot.yml
.semaphore/: semaphore.yml
backend/: .dockerignore  .env.example  .flake8  CODE_QUALITY_IMPROVEMENTS.md  Comprehensive Audit and Analysis for Backend.txt  Dockerfile  FRONTEND_INTEGRATION.md  MODEL_MANAGEMENT.md  POWERSHELL_API_EXAMPLES.md  Procfile  README.md  SETUP_COMPLETE.md  TODO.md  WINDOWS_INSTALL_GUIDE.md  app.py  check_supabase_tables.py  config.py  db.py  floodingnaque.db  ingest.py  inspect_db.py  main.py  mypy.ini  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt  requirements_backup.txt  risk_classifier.py  scheduler.py  start_server.ps1  tests  utils.py  verify_gee_credentials.py
docs/: FLOODINGNAQUE_THESIS_PAPER.md  GGSHIELD_SETUP.md  GIT_WORKFLOW_GUIDE.md  SPEED_INSIGHTS_INTEGRATION.md  TLS_SETUP.md  docs_folder_contents.txt  generate_thesis_figures.ipynb
frontend/: Frontend_Development_Guideline_20260112.txt  (+4 more)
(+475 files in other folders)
